# MobileCLI

./: .gitignore  CHECKPOINT_2026-01-17.md  CODEXREVIEW.md  INVESTIGATION_2026-01-17.md  OtherCLIS.md  RALPH_CODE_REVIEW.md  RALPH_SYNC_FIX.md  README.md  REVIEW_CONTEXT.md  RalphLoop_CHANGES.md  RalphLoop_FINDINGS.md  RalphLoop_LONGRUN.md  RalphLoop_PROGRESS.md  RalphLoop_TESTS.md  Review_Notes1-16.md  SYNC_INVESTIGATION.md  UX_INVESTIGATION_2026-01-17.md  codex_revamp.md  codexanalysis.md  codexreview1-18.md  fixproposalscodex.md  install.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: daemon.rs  detection.rs  link.rs  main.rs  platform.rs  protocol.rs  pty_wrapper.rs  qr.rs  session.rs  setup.rs  websocket.rs
desktop/: build.sh  index.html  package-lock.json  package.json  ralph-loop-rust.md  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: claude_history.rs  client_mode.rs  codex.rs  codex_watcher.rs  config.rs  db.rs  gemini.rs  gemini_watcher.rs  input_coordinator.rs  jsonl.rs  jsonl_watcher.rs  lib.rs  main.rs  opencode_watcher.rs  parser.rs  pty.rs  relay.rs  ws.rs
desktop/src/components/: AboutScreen.tsx  ChatView.tsx  ClientView.tsx  ErrorBoundary.tsx  HelpScreen.tsx  InputBar.tsx  Message.tsx  SettingsPanel.tsx  Sidebar.tsx  Terminal.tsx  TypingIndicator.tsx
desktop/src/components/setup/: ClientPairingStep.tsx  CompletionStep.tsx  HostSetupStep.tsx  ModeSelectionStep.tsx  SetupWizard.tsx  WelcomeStep.tsx  index.ts
desktop/src/hooks/: useClientSync.ts  useConfig.ts  useSession.ts
desktop/src/utils/: errorMessages.ts
docs/: gemini-cli-patterns.md  mobile-notifications-and-approvals-implementation.md
relay/: Cargo.toml
relay/src/: main.rs
shared/: protocol.ts  types.ts
